Report pdf and html redesign, version related fixes

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -1,7 +1,26 @@
 error.noDataSelected.title=No Data Selected
 error.noDataSelected.message=Please tick at least one measurement to include in the report.
+
 error.db.title=Database Error
 error.db.message=Unable to load data from the selected file.
+
 error.noPermission.title=Permission Error
 error.noPermission.message=Unable to load open the selected file. Try to run the program as administrator.
+
+error.dialog.title=Dialog Error
+error.dialog.message=Unable to open the options dialog.
+
+error.reportGeneration.title=Report Generation Error
+error.reportGeneration.message=Failed to generate or save the report:\n {0}
+
+info.reportGenerated.title=Report Generated
+info.reportGenerated.message=Your report was saved to:\n {0}
+
+ui.noMeasurementChosen.message=No measurement chosen
+ui.noCarbonEquivalentData.message=No data about carbon equivalent found.
+ui.carbonEquivalent.message=Carbon equivalent (CE): {0}
+
+ui.aboutProgram.title=Elanik Report Tool
+ui.aboutProgram.message=This application generates PDF reports from Elanik measurement data.
+
 error.report=Failed to generate or save the report: {0}
