--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -6,4 +6,21 @@ error.db.message=Не удалось загрузить данные из выб
 
 error.noPermission.title=Ошибка доступа
 error.noPermission.message=Не удалось открыть выбранный файл. Запустите программу с правами администратора.
+
+error.dialog.title=Ошибка опций сохранения
+error.dialog.message=Не удалось открыть меню настроек отчёта.
+
+error.reportGeneration.title=Report Generation Error
+error.reportGeneration.message=Failed to generate or save the report:\n {0}
+
+info.reportGenerated.title=Report Generated
+info.reportGenerated.message=Your report was saved to:\n {0}
+
+ui.noMeasurementChosen.message=No measurement chosen
+ui.noCarbonEquivalentData.message=Данные об углеродом эквиваленте отсутствуют.
+ui.carbonEquivalent.message=Углеродный эквивалент (CE): {0}
+
+ui.aboutProgram.title=Elanik Report Tool
+ui.aboutProgram.message=This application generates PDF reports from Elanik measurement data.
+
 error.report=Не удалось создать или сохранить отчёт: {0}
