Output minor design changes, language settings optimisations

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -13,6 +13,8 @@ error.dialog.message=Unable to open the options dialog.
 error.reportGeneration.title=Report Generation Error
 error.reportGeneration.message=Failed to generate or save the report:\n {0}
 
+error.report=Failed to generate or save the report: {0}
+
 info.reportGenerated.title=Report Generated
 info.reportGenerated.message=Your report was saved to:\n {0}
 
@@ -20,7 +22,40 @@ ui.noMeasurementChosen.message=No measurement chosen
 ui.noCarbonEquivalentData.message=No data about carbon equivalent found.
 ui.carbonEquivalent.message=Carbon equivalent (CE): {0}
 
+menu.file=File
+menu.file.open=Open database...
+menu.file.close=Close database
+menu.file.exit=Exit
+
+menu.report=Report
+menu.report.generate=Generate...
+
+menu.help=Help
+menu.help.about=About
 ui.aboutProgram.title=Elanik Report Tool
 ui.aboutProgram.message=This application generates PDF reports from Elanik measurement data.
 
-error.report=Failed to generate or save the report: {0}
+
+table.placeholder=No content in table
+table.id=No.
+table.datetime=Time
+table.points=Points
+table.base=Base
+table.alloy=Type
+table.comment=Comment
+
+table.element=Element
+table.concentration=%
+table.deviation=±
+table.alloy.1=Mark 1
+table.alloy.2=Mark 2
+table.alloy.3=Mark 3
+
+label.noMeasurement=No measurement chosen
+
+# Параметры отчёта
+reportOptions.title=Report options
+reportOptions.format=Format:
+reportOptions.language=Language:
+reportOptions.cancel=Cancel
+reportOptions.generate=Generate
