Minor style improvements, last directory saved on report creation

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -59,3 +59,5 @@ reportOptions.format=Format:
 reportOptions.language=Language:
 reportOptions.cancel=Cancel
 reportOptions.generate=Generate
+
+chooser.saveReport.title=Choose report location...
