--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -28,7 +28,7 @@ menu.file.close=Закрыть базу данных
 menu.file.exit=Выход
 
 menu.report=Отчет
-menu.report.generate=Сгенерировать...
+menu.report.generate=Создать...
 
 menu.help=Справка
 menu.help.about=О программе
@@ -57,6 +57,8 @@ reportOptions.title=Параметры отчёта
 reportOptions.format=Формат:
 reportOptions.language=Язык:
 reportOptions.cancel=Отмена
-reportOptions.generate=Сгенерировать
+reportOptions.generate=Создать
+
+chooser.saveReport.title=Выбор директории для сохранения отчёта...
 
 
